uptade swagger, specification, listCategory
